<resources>
    <string name="app_name">FireKernel Updater</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="firekernel">FireKernel</string>
    <string name="changelog">Change Log</string>
    <string name="update">Update</string>
    <string name="screenshot">Screenshots</string>
    <string name="support">Support</string>
    <string name="share">Share</string>
    <string name="donate">Donate</string>
    <string name="download">Download</string>
    <string name="checkforupdate">Check For Update</string>
</resources>
