<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_changelog" android:icon="@drawable/ic_menu_camera"
            android:title="@string/changelog" />
        <item android:id="@+id/nav_update" android:icon="@drawable/ic_menu_gallery"
            android:title="@string/update" />
        <item android:id="@+id/nav_screenshot" android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/screenshot" />
    </group>

    <item android:title="@string/support">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item android:id="@+id/nav_donate" android:icon="@drawable/ic_menu_send"
                android:title="@string/donate" />
        </menu>
    </item>

</menu>
